--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "A JavaScript library for including OpenWeatherMap's layers and OWM's current city/station data in leaflet based maps without hassle.",
   "main": "leaflet-openweathermap.js",
+  "types": "index.d.ts",
   "scripts": {
     "test": ""
   },
